# grpc-demo

./: .gitignore  Dockerfile.fastapi_server  Dockerfile.grpc_server  Dockerfile.node_client  LICENSE  README.md  data_generator.py  docker-compose.yml
fastapi_server/: main.py  pyproject.toml
grpc_server/: main.py  pyproject.toml
load-tests/: grpc_user.py  locustfile.py  pyproject.toml
node_client/: index.js  package-lock.json  package.json
protos/: data.proto  test.proto
