[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["VicenteMerino <vicente@trytoku.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
sqlalchemy = {version = "^2.0.23"}
greenlet = "^3.0.1"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
