[tool.poetry]
name = "load-tests"
version = "0.1.0"
description = ""
authors = ["VicenteMerino <vicente@trytoku.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.19.1"
grpcio = "^1.60.0"
grpc-interceptor = "^0.15.4"
protobuf = "^4.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
